# cpp-design-patterns

./: CMakeLists.txt  Makefile  README.md
demos/: all_patterns_demo.cpp  simple_demo.cpp  working_demo.cpp
src/creational/abstract-factory/: AbstractFactory.cpp  AbstractFactory.h
src/creational/builder/: Builder.cpp  Builder.h
src/creational/factory-method/: FactoryMethod.h
src/creational/prototype/: Prototype.cpp  Prototype.h
src/creational/singleton/: Singleton.cpp  Singleton.h
src/structural/adapter/: Adapter.cpp  Adapter.h
src/structural/bridge/: Bridge.cpp  Bridge.h
